# corporate-directory-api

./: Cargo.toml  README.md  diesel_tuto  postgres_tuto
migrations/2022-06-06-190126_company_api/: up.sql
migrations/2022-06-26-160742_corporate_directory_api/: down.sql  up.sql
src/: company.rs  company_controller.rs  employee.rs  employee_controller.rs  main.rs  schema.rs  utils.rs
