[package]
name = "corporate-directory-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
env_logger = "0.9.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1.4.8", features = ["postgres", "r2d2", "chrono", "uuid"]}
r2d2 = "0.8.8"
r2d2-diesel="1.0.0"
rand="0.8.4"
uuid={version="1.1.2", features = ["serde","v4"]}